Move grade badge to left, make div clickable, fix bugs, change points_visible to view_test_points, reduced files submitted space

--- a/public/resources/badge.css
+++ b/public/resources/badge.css
@@ -87,8 +87,18 @@
     float: left;
 }
 #HWsubmission .badge{
-    float: right;
+    /*margin:auto;*/
+    display: inline-block;
+    position: relative;
 }
+#HWsubmission .badge-cont{
+    margin-right: 10px;
+    min-width: 67px;
+    display: inline-block;
+    text-align: center;
+
+}
+
 #HWsubmission .view_file{
     float: right;
     font-family: 'Source Sans Pro', sans-serif;
@@ -222,16 +232,12 @@
     font-weight: 400;
 }
 
-#HWsubmission .diff-header span{
-    margin-left: .5em;
-}
-
 #HWsubmission .file-header {
     padding-left: 10px;
     padding-right: 10px;
 
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 7.5px;
+    padding-bottom: 7.5px;
     text-align: left;
     display:inline-block;
     box-sizing: border-box;
